// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ratio> Component <bolt-ratio> compiles 1`] = `
<bolt-ratio ratio="20/11">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((11 / 20) * 100%); --aspect-ratio: 1.8181818181818;"
  >
    <img src="/fixtures/1200x660.jpg">
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-ratio> Component <bolt-ratio> twig - ratio prop fraction containing a decimal 1`] = `
<bolt-ratio ratio="12/8.5">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((8.5 / 12) * 100%); --aspect-ratio: 1.4117647058824;"
  >
    <img src="/fixtures/1200x850-alt.jpg">
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-ratio> Component <bolt-ratio> web component - ratio prop fraction containing a decimal 1`] = `
<bolt-ratio ratio="12/8.5">
  <img src="/fixtures/1200x850.jpg">
</bolt-ratio>
`;

exports[`<bolt-ratio> Component Default <bolt-ratio> w/o Shadow DOM renders 1`] = `
<bolt-ratio no-shadow
            ratio="1200/660"
>
  <div class="c-bolt-ratio"
       style="--aspect-ratio:1.81818;"
  >
    <img src="/fixtures/1200x660.jpg">
  </div>
</bolt-ratio>
`;
